--- a/install_kube_with_ansible/inventory.ini
+++ b/install_kube_with_ansible/inventory.ini
@@ -5,3 +5,4 @@ node1 ansible_host="IP-VM" ansible_user= "username" ansible_become_password="pas
 # Groupe avec des variables pour tous les nœuds du groupe "kubernetes_nodes"
 [kubernetes_nodes:vars]
 ansible_python_interpreter=/usr/bin/python3
+#ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
