[UPDATE] : Setting multiple static networks in inventory

--- a/install_kube_with_ansible/inventory.ini
+++ b/install_kube_with_ansible/inventory.ini
@@ -1,6 +1,8 @@
 # Groupe d'hôtes pour déploiement de Kubernetes
 [kubernetes_nodes]
-node1 ansible_host="IP-VM" ansible_user= "username" ansible_become_password="password"
+node1 ansible_host="192.168.122.101" ansible_user="artisan" ansible_become_password="artisan"
+node2 ansible_host="192.168.122.102" ansible_user="artisan" ansible_become_password="artisan"
+node3 ansible_host="192.168.122.103" ansible_user="artisan" ansible_become_password="artisan"
 
 # Groupe avec des variables pour tous les nœuds du groupe "kubernetes_nodes"
 [kubernetes_nodes:vars]
