[UPDATE] : Adding retry rule to apt package to avoid apt-lock

--- a/install_kube_with_ansible/playbook.yaml
+++ b/install_kube_with_ansible/playbook.yaml
@@ -24,6 +24,11 @@
           - software-properties-common
         state: present
         update_cache: yes
+      retries: 5
+      delay: 10
+      register: apt_result
+      until: apt_result is succeeded
+
 
     - name: Download and install containerd binary
       shell: |
