--- a/nexus/docker-compose.yml
+++ b/nexus/docker-compose.yml
@@ -11,8 +11,5 @@ services:
       - "8083:8083"
       - "8081:8081"
     volumes:
-      - nexus_data:/nexus-data
+      - ./nexus_data:/nexus-data
     restart: always
-
-volumes:
-  nexus_data:
