--- a/monitoring/conf/prometheus/prometheus.yml
+++ b/monitoring/conf/prometheus/prometheus.yml
@@ -6,10 +6,10 @@ global:
 scrape_configs:
   - job_name: "prometheus"
     static_configs:
-      - targets: ["http://prometheus_service:9090"]
+      - targets: ["prometheus_service:9090"]
   - job_name: "grafana"
     static_configs:
-      - targets: ["http://grafana_service:3000"]
+      - targets: ["grafana_service:3000"]
   - job_name: "backend"
     static_configs:
-      - targets: ["http://artisan_backend_service:8000"]
+      - targets: ["artisan_backend_service:8000"]
