--- a/frontend-deployment-service.yml
+++ b/frontend-deployment-service.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
     name: artisan-webapp
+    namespace: artisan
 spec:
     replicas: 1
     selector:
@@ -14,20 +15,22 @@ spec:
         spec:
             containers:
                 - name: artisan-webapp
-                  image: mahsa242/artisan_webapp:18d350ba-7aa9-49ea-b586-94102064ef22
+                  image: mahsa242/front-end:v2
                   ports:
                       - containerPort: 3000
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
     name: artisan-webapp-service
+    namespace: artisan
 spec:
     selector:
         app: artisan-webapp
     type: NodePort
     ports:
         - protocol: TCP
-          port: 80
+          port: 3000
           targetPort: 3000
           nodePort: 30008
